# supernova

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  playwright.config.js
adr/: ADR_centurisk-access-control.md  ADR_centurisk-asset-registry.md  ADR_centurisk-data-quality-model.md  ADR_centurisk-delivery-strategy.md  ADR_centurisk-implementation-plan.md  ADR_centurisk-infrastructure.md  ADR_centurisk-io-adapters.md  ADR_centurisk-member-adapters.md  ADR_centurisk-nl-querying.md  ADR_centurisk-recommendation-engine.md  ADR_centurisk-sov-pipeline.md  ADR_centurisk-system-overview.md  ADR_centurisk-systems-design-review.md  ADR_centurisk-threat-model.md
centurisk-spec-review/: 00-index.md  01-review-progress.md  02-cross-cutting-decisions.md  03-asset-registry.md  04-data-quality-model.md  05-sov-pipeline.md  06-recommendation-engine.md  07-member-portal.md  08-io-adapters.md  09-nl-querying.md  10-access-control.md  11-missing-items.md  12-next-steps.md  13-exposure-module-contradictions.md
centurisk-spec-v3/: 00-index.md  01-governing-thought.md  02-asset-registry.md  03-data-quality-model.md  04-recommendation-engine.md  05-sov-pipeline.md  06-member-adapters.md  07-input-output-adapters.md  08-cross-cutting.md  09-infrastructure.md  10-deferred.md  11-boundary-summary.md  12-design-principles.md
crates/centurisk-api/: Cargo.toml
crates/centurisk-api/src/: approvals.rs  assets.rs  auth.rs  custom_fields.rs  dashboard.rs  export.rs  health.rs  lib.rs  notifications.rs  onboard.rs  quality.rs  recommendations.rs  renewals.rs  search.rs
crates/centurisk-auth/: Cargo.toml
crates/centurisk-auth/src/: cedar.rs  lib.rs  policy.rs  principal.rs  tenant.rs
crates/centurisk-core/: Cargo.toml
crates/centurisk-core/src/: asset.rs  audit.rs  expr.rs  field_value.rs  ids.rs  lib.rs  loss_event.rs  quality.rs  recommendation.rs  sov.rs
crates/centurisk-db/: Cargo.toml
crates/centurisk-db/src/: lib.rs  pool.rs
crates/centurisk-db/src/migrations/: V001__initial_schema.sql  V002__assets.sql  V003__system_admin.sql  V004__renewals.sql  V005__loss_events.sql  V006__notifications.sql  V007__custom_fields.sql
crates/centurisk-export/: Cargo.toml
crates/centurisk-export/src/: lib.rs  sov.rs
crates/centurisk-import/: Cargo.toml
crates/centurisk-import/src/: lib.rs
crates/centurisk-notify/: Cargo.toml
crates/centurisk-notify/src/: lib.rs
crates/centurisk-perf/: Cargo.toml
crates/centurisk-perf/src/: main.rs
crates/centurisk-search/: Cargo.toml
crates/centurisk-search/src/: fts.rs  lib.rs  nl.rs
crates/centurisk-server/: Cargo.toml
crates/centurisk-server/src/: main.rs
crates/centurisk-web/: Cargo.toml
crates/centurisk-web/src/: lib.rs
crates/centurisk-web/static/: index.html  styles.css
crates/centurisk-web/static/components/: app.js  approval-queue.js  asset-card.js  asset-detail.js  asset-form.js  asset-list.js  dashboard.js  login-page.js  nav-sidebar.js  quality-dashboard.js  renewal-page.js  search-bar.js
crates/spike-temporal/: Cargo.toml
crates/spike-temporal/src/: main.rs
e2e/: app-shell.spec.js  asset-crud.spec.js  auth-and-tenancy.spec.js  global-setup.js  health.spec.js
samples/coastal-counties/: oceanview-sov.csv  pool.csv
samples/demo-risk-pool/: pool.csv  shelbyville-sov.csv  springfield-sov.csv
scripts/: onboard-samples.sh  setup-project.sh
tools/pool-generator/: generate_pool.py
