[package]
name = "centurisk-api"
version = "0.1.0"
edition = "2021"

# Axum HTTP handlers and middleware

[dependencies]
centurisk-core = { path = "../centurisk-core" }
centurisk-auth = { path = "../centurisk-auth" }
centurisk-db = { path = "../centurisk-db" }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true }
rust_decimal = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
http = "1"
