[package]
name = "centurisk-auth"
version = "0.1.0"
edition = "2021"

# PolicyGate trait, TenantContext, AllowAllPolicy, Cedar (later)

[dependencies]
centurisk-core = { path = "../centurisk-core" }
cedar-policy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
