[package]
name = "centurisk-db"
version = "0.1.0"
edition = "2021"

# SQLite persistence (rusqlite + r2d2)

[dependencies]
centurisk-core = { path = "../centurisk-core" }
centurisk-auth = { path = "../centurisk-auth" }
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
refinery = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
