[package]
name = "centurisk-perf"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "centurisk-perf"
path = "src/main.rs"

[dependencies]
centurisk-core = { path = "../centurisk-core" }
rusqlite = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
rand = "0.8"
rust_decimal = { workspace = true }
time = { workspace = true }
